Add format and set Prettier as formatter

--- a/recipes/aeropress.html
+++ b/recipes/aeropress.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Aeropress Recipe</title>
-</head>
-<body>
-  <div class="main">
-    <h1 class="header title">Aeropress Recipe</h1>
-      <img src="../images/aeropress.webp" alt="aeropress device brewing coffee with a white background" height="310" width="310">
-    <div class="description">
-      <h2 class="header">Description</h2>
-      <p>The Aeropress is a coffee-making contraption that produces strong, flavorful coffee with minimal effort. While there is one standard method of brewing coffee provided by the manufacturer, many people have come up with their own adaptations. This is a simple recipe for an amazing cup of coffee with the aeropress, popularized by James Hoffmann. It takes about 5 minutes in total.</p>
-    </div>
-    <div class="ingredients">
-      <h2 class="header">Ingredients</h2>
+  </head>
+  <body>
+    <div class="main">
+      <h1 class="header title">Aeropress Recipe</h1>
+      <img
+        src="../images/aeropress.webp"
+        alt="aeropress device brewing coffee with a white background"
+        height="310"
+        width="310"
+      />
+      <div class="description">
+        <h2 class="header">Description</h2>
+        <p>
+          The Aeropress is a coffee-making contraption that produces strong,
+          flavorful coffee with minimal effort. While there is one standard
+          method of brewing coffee provided by the manufacturer, many people
+          have come up with their own adaptations. This is a simple recipe for
+          an amazing cup of coffee with the aeropress, popularized by James
+          Hoffmann. It takes about 5 minutes in total.
+        </p>
+      </div>
+      <div class="ingredients">
+        <h2 class="header">Ingredients</h2>
         <ul>
           <li>Aeropress</li>
           <li>Aeropress coffee filter</li>
@@ -23,22 +35,43 @@
           <li>1 cup boiling hot water</li>
           <li>2 tablespoons of ground coffee</li>
         </ul>
+      </div>
+      <div class="steps">
+        <h2 class="header">Steps</h2>
+        <ol>
+          <li>Boil the water.</li>
+          <li>
+            While the water is boiling, scoop the coffee into the aeropress
+            coffee filter chamber.
+          </li>
+          <li>
+            When water is boiled, add the water to the filter chamber to the
+            number 4 circle.
+          </li>
+          <li>
+            Press the plunger slightly into the Aeropress chamber, just enough
+            to create a vacuum seal.
+          </li>
+          <li>Let the coffee brew for about 2 minutes.</li>
+          <li>
+            Holding the Aeropress plunger and chamber, gently swirl to break up
+            the coffee crust. Stop swirling once the coffee frees up and wait 30
+            seconds.
+          </li>
+          <li>
+            Slowly plunge with equal pressure. This should take about 30
+            seconds.
+          </li>
+          <li>
+            Once fully plunged, pull the plunger back a little to help prevent
+            drippage. Then discard the coffee grounds.
+          </li>
+          <li>Enjoy!</li>
+        </ol>
+      </div>
+      <a href="../index.html" rel="noopener noreferrer"
+        ><button>Back to Homepage</button></a
+      >
     </div>
-    <div class="steps">
-     <h2 class="header">Steps</h2>
-      <ol>
-        <li>Boil the water.</li>
-        <li>While the water is boiling, scoop the coffee into the aeropress coffee filter chamber.</li>
-        <li>When water is boiled, add the water to the filter chamber to the number 4 circle.</li>
-        <li>Press the plunger slightly into the Aeropress chamber, just enough to create a vacuum seal.</li>
-        <li>Let the coffee brew for about 2 minutes.</li>
-        <li>Holding the Aeropress plunger and chamber, gently swirl to break up the coffee crust. Stop swirling once the coffee frees up and wait 30 seconds.</li>
-        <li>Slowly plunge with equal pressure. This should take about 30 seconds.</li>
-        <li>Once fully plunged, pull the plunger back a little to help prevent drippage. Then discard the coffee grounds.</li>
-        <li>Enjoy!</li>
-       </ol>
-     </div>
-    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
-  </div>
-</body>
+  </body>
 </html>
