--- a/recipes/pineappletea.html
+++ b/recipes/pineappletea.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Pineapple Ginger Tea Recipe</title>
-</head>
-<body>
-  <div class="main">
-    <h1 class="header title">Pineapple Ginger Tea Recipe</h1>
-      <img src="../images/pineappletea.jpeg" alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups" height="310" width="310">
+  </head>
+  <body>
+    <div class="main">
+      <h1 class="header title">Pineapple Ginger Tea Recipe</h1>
+      <img
+        src="../images/pineappletea.jpeg"
+        alt="two cups of pineapple ginger tea on a wooden table with the top of a pineapple visible in the background and a piece of orange and ginger next to the cups"
+        height="310"
+        width="310"
+      />
       <div class="description">
         <h2 class="header">Description</h2>
-        <p>This is a simple recipe for a healthy, warming batch of ginger pineapple tea. It's a great way to make use of pineapple rinds. Serving size is about 4 cups. It takes about 10-30 minutes in total depending on how strong you want your tea to be.</p>
+        <p>
+          This is a simple recipe for a healthy, warming batch of ginger
+          pineapple tea. It's a great way to make use of pineapple rinds.
+          Serving size is about 4 cups. It takes about 10-30 minutes in total
+          depending on how strong you want your tea to be.
+        </p>
       </div>
       <div class="ingredients">
         <h2 class="header">Ingredients</h2>
-          <ul>
-            <li>Pot</li>
-            <li>Tea strainer</li>
-            <li>Mug</li>
-            <li>4 cups of water</li>
-            <li>Rinds from one pineapple</li>
-            <li>A few inches of ginger, maybe a tablespoon or two</li>
-            <li>Honey if you want it sweetened</li>
-          </ul>
+        <ul>
+          <li>Pot</li>
+          <li>Tea strainer</li>
+          <li>Mug</li>
+          <li>4 cups of water</li>
+          <li>Rinds from one pineapple</li>
+          <li>A few inches of ginger, maybe a tablespoon or two</li>
+          <li>Honey if you want it sweetened</li>
+        </ul>
       </div>
       <div class="steps">
-       <h2 class="header">Steps</h2>
-       <ol>
-        <li>Boil the water in the pot.</li>
-        <li>While water is boiling, cut the pineapple rinds off of the pineapple and cut them into smmall strips, around 3 inches long and an inch wide.</li>
-        <li>Mince the ginger or cut into small strips.</li>
-        <li>Put the ginger and pineapple rinds in the water. You can put them in while the water is boiling or you can wait for the water to boil.</li>
-        <li>Once water is fully boiling, turn down heat to maintain a simmer. Simmer covered or uncovered for at least 7 minutes, or as long as you prefer. </li>
-        <li>Strain the tea into a large jar and pour individual servings as desired.</li>
-        <li>Enjoy!</li>
-       </ol>
-     </div>
-     <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
-  </div>  
-</body>
+        <h2 class="header">Steps</h2>
+        <ol>
+          <li>Boil the water in the pot.</li>
+          <li>
+            While water is boiling, cut the pineapple rinds off of the pineapple
+            and cut them into smmall strips, around 3 inches long and an inch
+            wide.
+          </li>
+          <li>Mince the ginger or cut into small strips.</li>
+          <li>
+            Put the ginger and pineapple rinds in the water. You can put them in
+            while the water is boiling or you can wait for the water to boil.
+          </li>
+          <li>
+            Once water is fully boiling, turn down heat to maintain a simmer.
+            Simmer covered or uncovered for at least 7 minutes, or as long as
+            you prefer.
+          </li>
+          <li>
+            Strain the tea into a large jar and pour individual servings as
+            desired.
+          </li>
+          <li>Enjoy!</li>
+        </ol>
+      </div>
+      <a href="../index.html" rel="noopener noreferrer"
+        ><button>Back to Homepage</button></a
+      >
+    </div>
+  </body>
 </html>
