--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Recipes Project</title>
-</head>
-<body> 
-  <div class="main">
-    <h1 class="header title">Odin Recipes: Hot Beverages to Get You Through Winter</h1> 
-    <div class="links">
-      <ul>
-        <li><a href="recipes/chai.html" rel="noopener noreferrer">Chai Recipe</a></li>
-        <li><a href="recipes/aeropress.html" rel="noopener noreferrer">Aeropress Coffee Recipe</a></li>
-        <li><a href="recipes/pineappletea.html" rel="noopener noreferrer">Pineapple Ginger Tea Recipe</a></li> 
-      </ul>
+  </head>
+  <body>
+    <div class="main">
+      <h1 class="header title">
+        Odin Recipes: Hot Beverages to Get You Through Winter
+      </h1>
+      <div class="links">
+        <ul>
+          <li>
+            <a href="recipes/chai.html" rel="noopener noreferrer"
+              >Chai Recipe</a
+            >
+          </li>
+          <li>
+            <a href="recipes/aeropress.html" rel="noopener noreferrer"
+              >Aeropress Coffee Recipe</a
+            >
+          </li>
+          <li>
+            <a href="recipes/pineappletea.html" rel="noopener noreferrer"
+              >Pineapple Ginger Tea Recipe</a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
