--- a/recipes/chai.html
+++ b/recipes/chai.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Chai Recipe</title>
-</head>
-<body>
-  <div class="main">
-    <h1 class="header title">Chai Recipe</h1>
-      <img src="../images/chai.webp" alt="chai being poured into a white cup with a white background" height="310" width="310">
-    <div class="description">
-      <h2 class="header">Description</h2>
-      <p>This is a simple recipe for an amazing cup of chai. It takes about 7-10 minutes in total.</p>
-    </div>
-    <div class="ingredients">  
-      <h2 class="header">Ingredients</h2>
-       <ul>
+  </head>
+  <body>
+    <div class="main">
+      <h1 class="header title">Chai Recipe</h1>
+      <img
+        src="../images/chai.webp"
+        alt="chai being poured into a white cup with a white background"
+        height="310"
+        width="310"
+      />
+      <div class="description">
+        <h2 class="header">Description</h2>
+        <p>
+          This is a simple recipe for an amazing cup of chai. It takes about
+          7-10 minutes in total.
+        </p>
+      </div>
+      <div class="ingredients">
+        <h2 class="header">Ingredients</h2>
+        <ul>
           <li>Tea strainer</li>
           <li>Mug</li>
           <li>1 cup boiling hot water</li>
@@ -28,19 +36,33 @@
           <li>Pinch of fennel seeds</li>
           <li>1 clove</li>
         </ul>
+      </div>
+      <div class="steps">
+        <h2 class="header">Steps</h2>
+        <ol>
+          <li>Boil the water.</li>
+          <li>
+            While the water is boiling, scoop the black tea into the tea
+            strainer or the tea bag into the mug.
+          </li>
+          <li>
+            Crush the cardamom pods and put them in the tea strainer along with
+            the cinnamon, ginger, fennel seeds, and clove.
+          </li>
+          <li>
+            When water is boiled, add the water to the mug and let the tea steep
+            for 5-8 minutes, depending on how strong you prefer.
+          </li>
+          <li>
+            Remove the tea strainer and add a splash or two of milk, depending
+            on how milky you prefer.
+          </li>
+          <li>Enjoy!</li>
+        </ol>
+      </div>
+      <a href="../index.html" rel="noopener noreferrer"
+        ><button>Back to Homepage</button></a
+      >
     </div>
-    <div class="steps"> 
-      <h2 class="header">Steps</h2>
-       <ol>
-        <li>Boil the water.</li>
-        <li>While the water is boiling, scoop the black tea into the tea strainer or the tea bag into the mug.</li>
-        <li>Crush the cardamom pods and put them in the tea strainer along with the cinnamon, ginger, fennel seeds, and clove.</li>
-        <li>When water is boiled, add the water to the mug and let the tea steep for 5-8 minutes, depending on how strong you prefer.</li>
-        <li>Remove the tea strainer and add a splash or two of milk, depending on how milky you prefer.</li>
-        <li>Enjoy!</li>
-       </ol>
-    </div> 
-    <a href="../index.html" rel="noopener noreferrer"><button>Back to Homepage</button></a>
-  </div>
-</body>
+  </body>
 </html>
